[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lockhart"
description = 'generate docstrings'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Waylon S. Walker", email = "waylon@waylonwalker.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "openai",
  "pyperclip",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/lockhart#readme"
Issues = "https://github.com/unknown/lockhart/issues"
Source = "https://github.com/unknown/lockhart"

[project.scripts]
lockhart = "lockhart.cli:lockhart"

[tool.hatch.version]
path = "lockhart/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=lockhart --cov=tests {args}"
no-cov = "cov --no-cov {args}"
test-lint = ""

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "lockhart/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
