[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lockhart"
description = 'generate docstrings'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Waylon S. Walker", email = "waylon@waylonwalker.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jinja2",
  "openai",
  "pluggy",
  "pyperclip",
  "rich",
  "textual",
  "toml",
  "tomlkit",
  "typer",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/waylonwalker/lockhart#readme"
Issues = "https://github.com/waylonwalker/lockhart/issues"
Source = "https://github.com/walker/lockhart"

[project.scripts]
lockhart = "lockhart.cli:app"

[tool.hatch.version]
path = "lockhart/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "debugpy",
  "diskcache",
  "flake8",
  "interrogate",
  "isort",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-pretty",
  "seed-isort-config",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=lockhart --cov=tests {args}"
no-cov = "cov --no-cov {args}"
lint = "flake8 lockhart"
format = "black --check lockhart"
sort-imports = "isort lockhart"
build-docs = "markata build"
lint-test = [
 "lint",
 "format",
 "seed-isort-config",
 "sort-imports",
 "cov",
]
test-lint = "lint-test"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "lockhart/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_third_party = ["jinja2", "openai", "pyperclip", "pytest", "rich", "textual", "tomlkit", "typer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
